test/compile-fail/resolution/type-existence/no-such-item/expected.txt
error[E0425]: unresolved item `b`
  ┌─ ./test/compile-fail/resolution/type-existence/no-such-item/top.rhdl:1:11
  │
1 │ fn a() -> b {}
  │           ^ no `b` item

